[gd_scene load_steps=23 format=3 uid="uid://b7cooyoqod2np"]

[ext_resource type="Script" uid="uid://mdvfdts5qmwl" path="res://Scripts/PlayerController.gd" id="1_kyqiw"]
[ext_resource type="Texture2D" uid="uid://y5huprkt8hcd" path="res://Assets/Temp/testchar_sheet.png" id="1_rpqav"]
[ext_resource type="Script" uid="uid://5q1tlowutssd" path="res://Scenes/Inventory.gd" id="2_dewec"]
[ext_resource type="Resource" uid="uid://dkg175n163saw" path="res://Resources/Crafting Items/rsc_wood.tres" id="3_52ee3"]
[ext_resource type="Script" uid="uid://dygu5co2onkff" path="res://Scripts/PlayerHitManager.gd" id="3_gntrk"]
[ext_resource type="Resource" uid="uid://7arqepfd7k24" path="res://Resources/Crafting Items/rsc_stone.tres" id="4_bhhdu"]
[ext_resource type="Resource" uid="uid://c2k8os6u6va37" path="res://Resources/Crafting Items/rsc_energy.tres" id="5_megsn"]

[sub_resource type="Animation" id="Animation_gntrk"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(2, 2)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:can_hit")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_52ee3"]
resource_name = "crouch"
length = 0.0833417
loop_mode = 1
step = 0.0833333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(6, 0)]
}

[sub_resource type="Animation" id="Animation_nn08x"]
resource_name = "fall"
length = 0.0833417
loop_mode = 1
step = 0.0833333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(5, 0)]
}

[sub_resource type="Animation" id="Animation_megsn"]
resource_name = "hit"
length = 0.5
loop_mode = 1
step = 0.0833333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.166667),
"transitions": PackedFloat32Array(1, 0.5),
"update": 0,
"values": [Vector2(2.2, 2.2), Vector2(2, 2)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:can_hit")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.416667),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = false
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.416667),
"transitions": PackedFloat32Array(1, 0.5),
"update": 0,
"values": [Color(1, 0.289432, 0.316126, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_kyqiw"]
resource_name = "idle"
length = 0.0833417
loop_mode = 1
step = 0.0833333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}

[sub_resource type="Animation" id="Animation_5ixxa"]
resource_name = "jump"
length = 0.0833417
loop_mode = 1
step = 0.0833333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(4, 0)]
}

[sub_resource type="Animation" id="Animation_dewec"]
resource_name = "move"
length = 0.333342
loop_mode = 1
step = 0.0833333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0833333, 0.166667, 0.25),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(1, 0), Vector2i(0, 0), Vector2i(2, 0), Vector2i(0, 0)]
}

[sub_resource type="Animation" id="Animation_bhhdu"]
resource_name = "slide"
length = 0.0833417
loop_mode = 1
step = 0.0833333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(7, 0)]
}

[sub_resource type="Animation" id="Animation_yoq75"]
resource_name = "up"
length = 0.0833417
loop_mode = 1
step = 0.0833333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(8, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gntrk"]
_data = {
&"RESET": SubResource("Animation_gntrk"),
&"crouch": SubResource("Animation_52ee3"),
&"fall": SubResource("Animation_nn08x"),
&"hit": SubResource("Animation_megsn"),
&"idle": SubResource("Animation_kyqiw"),
&"jump": SubResource("Animation_5ixxa"),
&"move": SubResource("Animation_dewec"),
&"slide": SubResource("Animation_bhhdu"),
&"up": SubResource("Animation_yoq75")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_rpqav"]
radius = 25.0
height = 100.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kyqiw"]
size = Vector2(34, 71)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gntrk"]
size = Vector2(78, 29)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dewec"]
size = Vector2(54, 104)

[sub_resource type="CircleShape2D" id="CircleShape2D_gntrk"]
radius = 28.0713

[node name="Player" type="CharacterBody2D" node_paths=PackedStringArray("sprite", "collider", "anim", "hitboxes_root", "stun_timer", "invincibility_timer") groups=["Players"]]
z_index = 10
collision_layer = 8
script = ExtResource("1_kyqiw")
sprite = NodePath("Sprite2D")
collider = NodePath("Collider")
anim = NodePath("AnimationPlayer")
hitboxes_root = NodePath("HitBoxesRoot")
stun_timer = NodePath("StunTimer")
invincibility_timer = NodePath("InvincibilityTimer")

[node name="Inventory" type="Node2D" parent="."]
script = ExtResource("2_dewec")
debug_labels_root = NodePath("../DebugUI/LabelsContainer")
wood_resource = ExtResource("3_52ee3")
stone_resource = ExtResource("4_bhhdu")
energy_resource = ExtResource("5_megsn")

[node name="DebugUI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0

[node name="CurrentState" type="Label" parent="DebugUI"]
offset_left = -32.0
offset_top = -160.0
offset_right = 45.0
offset_bottom = -137.0
theme_override_font_sizes/font_size = 16
text = "State: Idle"

[node name="MiscLabel" type="Label" parent="DebugUI"]
offset_left = -32.0
offset_top = -146.0
offset_right = 42.0
offset_bottom = -123.0
theme_override_font_sizes/font_size = 16
text = "Misc"

[node name="ColorRect" type="ColorRect" parent="DebugUI"]
layout_mode = 0
offset_left = -51.0
offset_right = -11.0
offset_bottom = 40.0
scale = Vector2(3.08, 2.36)
color = Color(0, 0, 0, 0.305882)

[node name="LabelsContainer" type="VBoxContainer" parent="DebugUI"]
offset_left = -36.0
offset_top = 5.0
offset_right = 26.0
offset_bottom = 82.0

[node name="WoodLabel" type="Label" parent="DebugUI/LabelsContainer"]
layout_mode = 2
text = "Wood: 0"
metadata/resource = true

[node name="StoneLabel" type="Label" parent="DebugUI/LabelsContainer"]
layout_mode = 2
text = "Stone: 0"
metadata/resource = true

[node name="EnergyLabel" type="Label" parent="DebugUI/LabelsContainer"]
layout_mode = 2
text = "Energy: 0"
metadata/resource = true

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(2, 2)
skew = 0.00191304
texture = ExtResource("1_rpqav")
offset = Vector2(0, -31)
hframes = 9

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_gntrk")
}
autoplay = "idle"

[node name="Collider" type="CollisionShape2D" parent="."]
position = Vector2(0, -48)
shape = SubResource("CapsuleShape2D_rpqav")

[node name="HitBoxesRoot" type="Node2D" parent="." node_paths=PackedStringArray("player", "hurtbox", "hitbox_left", "hitbox_right", "hitbox_up", "hitbox_down", "misc_label")]
modulate = Color(1, 1, 1, 0.376471)
script = ExtResource("3_gntrk")
player = NodePath("..")
max_health = 3
hit_force = 800.0
hurtbox = NodePath("Hurtbox")
hitbox_left = NodePath("HitBoxLeft")
hitbox_right = NodePath("HitBoxRight")
hitbox_up = NodePath("HitBoxUp")
hitbox_down = NodePath("HitBoxDown")
misc_label = NodePath("../DebugUI/MiscLabel")

[node name="HitBoxLeft" type="Area2D" parent="HitBoxesRoot"]
collision_layer = 8
collision_mask = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBoxesRoot/HitBoxLeft"]
position = Vector2(-27, -50.5)
shape = SubResource("RectangleShape2D_kyqiw")
debug_color = Color(0.212326, 0.634725, 0.237243, 0.42)

[node name="HitBoxRight" type="Area2D" parent="HitBoxesRoot"]
collision_layer = 8
collision_mask = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBoxesRoot/HitBoxRight"]
position = Vector2(27, -50.5)
shape = SubResource("RectangleShape2D_kyqiw")
debug_color = Color(0.212326, 0.634725, 0.237243, 0.42)

[node name="HitBoxUp" type="Area2D" parent="HitBoxesRoot"]
collision_layer = 8
collision_mask = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBoxesRoot/HitBoxUp"]
position = Vector2(0, -101.5)
shape = SubResource("RectangleShape2D_gntrk")
debug_color = Color(0.6399, 0.523577, 0.0962156, 0.42)

[node name="HitBoxDown" type="Area2D" parent="HitBoxesRoot"]
collision_layer = 8
collision_mask = 6

[node name="CollisionShape2D2" type="CollisionShape2D" parent="HitBoxesRoot/HitBoxDown"]
shape = SubResource("RectangleShape2D_gntrk")
debug_color = Color(0.855386, 0.329567, 0.43098, 0.42)

[node name="Hurtbox" type="Area2D" parent="HitBoxesRoot"]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBoxesRoot/Hurtbox"]
position = Vector2(0, -53)
shape = SubResource("RectangleShape2D_dewec")

[node name="StunTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="InvincibilityTimer" type="Timer" parent="."]
one_shot = true

[node name="CollectionHitBox" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollectionHitBox"]
position = Vector2(0, -24)
shape = SubResource("CircleShape2D_gntrk")

[connection signal="hit_data" from="HitBoxesRoot" to="." method="_on_hit_data"]
[connection signal="area_shape_entered" from="HitBoxesRoot/HitBoxLeft" to="HitBoxesRoot" method="_on_left_area_entered"]
[connection signal="area_shape_exited" from="HitBoxesRoot/HitBoxLeft" to="HitBoxesRoot" method="_on_left_area_exited"]
[connection signal="area_shape_entered" from="HitBoxesRoot/HitBoxRight" to="HitBoxesRoot" method="_on_right_area_entered"]
[connection signal="area_shape_exited" from="HitBoxesRoot/HitBoxRight" to="HitBoxesRoot" method="_on_right_area_exited"]
[connection signal="area_shape_entered" from="HitBoxesRoot/HitBoxUp" to="HitBoxesRoot" method="_on_up_area_entered"]
[connection signal="area_shape_exited" from="HitBoxesRoot/HitBoxUp" to="HitBoxesRoot" method="_on_up_area_exited"]
[connection signal="area_shape_entered" from="HitBoxesRoot/HitBoxDown" to="HitBoxesRoot" method="_on_down_area_entered"]
[connection signal="area_shape_exited" from="HitBoxesRoot/HitBoxDown" to="HitBoxesRoot" method="_on_down_area_exited"]
[connection signal="timeout" from="StunTimer" to="." method="_on_stun_timer_timeout"]
[connection signal="timeout" from="InvincibilityTimer" to="." method="_on_invincibility_timer_timeout"]
